--- a/website/static/css/translate.css
+++ b/website/static/css/translate.css
@@ -1,6 +1,6 @@
 .translate-panel {
 	text-align: left;
-	padding: 0 12px 0 12px; 
+	padding: 120px 12px 0 12px; 
 }
 
 .btn-copy{
